# edital-radar

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: db.py  embeddings.py  filtros.py  indexar.py  ingest.py  main.py  perfil.py  pncp.py
docs/: corpus-notes.md
edital_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
evals/: classificadores.py  eval-set.yaml  perfil-empresa.yaml  run.py
sql/: 001_schema.sql
tests/: test_embeddings.py  test_eval_runner.py  test_filtros.py  test_ingest.py  test_pncp.py
