[project]
name = "edital-radar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]
# Kept out of the default install: torch adds ~2GB, and the API container
# does not need it. Ingestion and evaluation run from the host venv.
embeddings = ["sentence-transformers>=3.0"]

[tool.setuptools]
packages = ["app", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
